# primo

./: -am  -m  .gitignore  README.md
src/: tags
src/differential-drive/: CMakeLists.txt
src/differential-drive/scripts/: diff_tf.py
src/differential-drive/src/: diff_tf.cpp  pid_velocity.cpp  primo_diff_tf.cpp
src/differential_drive/: CMakeLists.txt
src/differential_drive/cfg/: DiffTf.cfg  Diff_Tf.cfg
src/differential_drive/scripts/: diff_tf.py  pid_velocity.py  virtual_joystick.py
src/differential_drive/src/: pid_velocity.cpp
src/memsense_uimu/: CMakeLists.txt  package.xml
src/memsense_uimu/include/: uimu.h  uimu_packet.h
src/memsense_uimu/src/: uimu.cpp  uimu_node.cpp
src/primo_base/: CMakeLists.txt  package.xml
src/primo_base/config/: color0.yaml  movement_limits.yaml  robot_localization.yaml
src/primo_base/include/power_sensor/: power_sensor.ino
src/primo_base/launch/: ard_enc.launch  color0.launch  color0_calibrate.launch  diff_drive.launch  diff_tf.launch  joy.launch  joy_twist.launch  power_sensor.launch  robot_localization.launch  stereo_trigger.launch  tune_plots.launch  vel_smooth.launch  yolo2.launch  yolo2_proc.launch
src/primo_base/record/: mapping.sh
src/primo_base/rviz/: exposure.rviz  replay.rviz
src/primo_base/scripts/: robonet.py
src/primo_base/src/: joy_estop.cpp  joy_manager.cpp
src/primo_base/src/power_sensor/: .ycm_extra_conf.py  power_sensor.ino  readme
src/primo_base/src/stereo_trigger/: readme.md  stereo_trigger.ino
src/primo_base/src/stereo_trigger/schematic/: eagle.epf  stereo_trigger_arduino.sch
src/primo_bringup/: CMakeLists.txt  package.xml
src/primo_bringup/config/: imu_test.rviz  odom_viz.perspective  sim_nav.rviz  stereo_test.rviz
src/primo_bringup/launch/: base_alpha.launch  beta.launch  demo_record.launch  diff_test.launch  follow_waypoints.launch  imu_test.launch  localization.launch  rtabmap.launch  rtabmap_replay.launch  rviz.launch  sim.launch  sim_wheel.launch  stereo_bare.launch  stereo_tweak.launch  yolo2.launch
src/primo_bringup/scripts/: run_gazebo.sh
src/primo_dash/: CMakeLists.txt  mainpage.dox  package.xml  tags
src/primo_dash/src/: main.cpp  main_window.cpp  qnode.cpp
src/primo_dash/ui/: main_window.ui
src/primo_description/: CMakeLists.txt  package.xml
src/primo_description/config/: align.yaml  align_orig.yaml
src/primo_description/launch/: imu_test.launch  primo_urdf.launch  primo_urdf_common.xml  primo_urdf_real.launch  primo_urdf_sim.launch
src/primo_description/meshes/: R1_primo_sim.STL  chassis.STL  chassis.dae  chassis_2017_06_07.STL  chassis_no_castor.STL  r1_primo_real.stl  r1_wheel.stl  wheel.STL
src/primo_description/scripts/: align_save.py
src/primo_description/urdf/: align.yaml  align_test_script.sh  cameras.xacro  imu.xacro  imu_test.xacro  macros.xacro  primo.gazebo  primo.gv  primo_real.xacro  primo_sim.gazebo  primo_sim.urdf  primo_sim.xacro  stereo_suite.xacro  test.urdf
src/primo_doc/: Figures.odg  cost_map.xcf  odometry.xcf  path_planner.xcf  primo_sheets.ods
src/primo_gazebo/: CMakeLists.txt  package.xml
src/primo_gazebo/config/: primo_control.yaml
src/primo_gazebo/launch/: primo_gazebo.launch
src/primo_gazebo/nodes/: sim_wheel_encoders.py
src/primo_gazebo/rviz/: gazebo.rviz
src/primo_gazebo/urdf/: primo_sim.xacro  sim_controller.xacro  sim_controller_wheel.xacro  sim_main.xacro  sim_stereo.xacro  sim_wheels.xacro
src/primo_gazebo/worlds/: bat_cave.world  empty  empty.world  playland.world
src/primo_nav/: CMakeLists.txt  package.xml
src/primo_nav/config/: base_global_planner.yaml  base_local_planner_params.yaml  base_local_planner_params_dwa.yaml  base_local_planner_params_test.yaml  costmap_common_params.yaml  costmap_exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml  simple.yaml
src/primo_nav/lanes/: 3rd_floor.pgm  3rd_floor.yaml  autodrive_orig.pgm  out_map.pgm  (+20 more)
src/primo_record/: CMakeLists.txt  bobcatrecord.sh  filter_robo_tf.sh  mapping.sh  odometry.sh  package.xml  readme.md  sensor_suite.sh  stereo.sh
src/primo_rtabmap/: CMakeLists.txt  map.pgm  map.yaml  package.xml
src/primo_stereo/: CMakeLists.txt  fix_stereo2.sh  package.xml
src/primo_stereo/config/: save_cal.py  stereo.yaml
src/primo_stereo/config/archive/: stereo0.yaml  stereo1.yaml  very_smooth.yaml
src/primo_stereo/config/stereo0/: left.yaml  right.yaml
src/primo_stereo/config/stereo0/archive/: save_cal.sh
src/primo_stereo/config/stereo0/archive/8.12.17/: left.sh  left.yaml  ost.txt  right.yaml  sample_left  tara_orb.yaml
src/primo_stereo/config/stereo1/: left.yaml  right.yaml
src/primo_stereo/config/stereo1/archive/8.12.17/: orgi_left.yaml
src/primo_stereo/config/stereo2/: left.yaml  right.yaml
src/primo_stereo/docs/: image_pipeline.odg
src/primo_stereo/launch/: calibrate.launch  calibrate_stereo0.launch  calibrate_stereo1.launch  calibrate_stereo2.launch  filter_box.launch  merge.launch  stereo0.launch  stereo0_driver.launch  stereo0_proc.launch  stereo1.launch  stereo1_driver.launch  stereo1_proc.launch  stereo2.launch  stereo2_driver.launch  stereo2_proc.launch  stereo3.launch  stereo_fwd_libuvc.launch  stereo_nodelet.launch  stereo_sidelooking.launch  stereo_suite.launch
src/primo_stereo/rviz/: config.rviz  td1_map.rviz
src/primo_stereo/scripts/: stereo2_fix.sh
src/primo_stereo/src/: pcl_merge.cpp
src/primo_stereo/tools/: save_cal.sh
src/primo_stereo/tools/stereo0/: left.yaml  readme  right.yaml
src/primo_stereo/tools/stereo0/archive/: save_cal.sh
src/sabertooth_simple/: CMakeLists.txt  package.xml
src/sabertooth_simple/include/: sabertooth_simple.h
src/sabertooth_simple/src/: sabertooth_simple.cpp  sabertooth_simple_node.cpp
src/sabertooth_simple/srv/: SabertoothEstop.srv
src/stereo_mask/: CMakeLists.txt  nodelets.xml  package.xml
src/stereo_mask/include/stereo_mask/: stereo_mask.h  stereo_mask_nodelet.h
src/stereo_mask/launch/: stereo_mask_nodelet.launch
src/stereo_mask/src/: main.cpp  stereo_mask.cpp  stereo_mask_node.cpp  stereo_mask_nodelet.cpp
src/tara_uvc_cam/: CMakeLists.txt
(+72 files in other folders)
