<?xml version="1.0"?>
<package>
    <name>primo_stereo</name>
    <version>0.0.0</version>
    <description>The primo_stereo package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="paul@todo.todo">paul</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <build_depend>tf2</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <run_depend>tf2</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <buildtool_depend>catkin</buildtool_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
