<?xml version="1.0"?>
<package format="2">
  <name>stereo_mask</name>
  <version>0.0.0</version>
  <description>The stereo_mask package is used to mask off areas of
      an image from a stereo camera. This allows for removing parts 
      of the image where the robot's own body is present. </description>

  <maintainer email="paul.c.sammut@gmail.com">paul</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>

</package>
